# projeto_flask

./: produtos.csv  pyproject.toml
projeto_flask/: app.py  app2.py
projeto_flask/templates/: base.html  base2.html  cadastro_produto.html  gerar-cnpj.html  gerar-cpf.html  home.html  produto.html  produtos.html  resultado-cnpj.html  resultado-cpf.html  validar-cnpj.html  validar-cpf.html
