[tool.poetry]
name = "projeto-flask"
version = "0.1.0"
description = ""
authors = ["Tro Armen <seuemail@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
validate-docbr = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
